# fictadvisor-bot

./: .env.dist  .env.example  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt  serverless.yml  tsconfig.json
.github/workflows/: build.yml  code_check.yml  deploy.yaml  deployment-master.yml  deployment-staging.yml  deployment.yml  mypy.yml  production-deployment.yml  ruff.yml
app/: custom_logging.py  main.py  schedule.py  settings.py
app/api/: exception_handler.py  factory.py
app/api/middlewares/: authentication.py
app/api/routes/: broadcast.py  captain.py  response.py  student.py  superhero.py  webhook.py
app/api/schemas/: captain.py  response.py  student.py  superhero.py
app/bot/: factory.py
app/bot/filters/: chat_bound.py  is_captain_or_deputy.py
app/bot/handlers/: __init__.py  captain.py  debug.py  private.py  response.py  student.py  superhero.py
app/bot/handlers/debug/: __init__.py  info.py
app/bot/handlers/general/: __init__.py  help.py
app/bot/handlers/group/: __init__.py  add_event_info.py  bind.py  captain_button_press_callback.py  enable.py  fortnight.py  invite_bot.py  kick_bot.py  left.py  next.py  now.py  today.py  tomorrow.py  week.py
app/bot/handlers/private/: __init__.py  add_event_info.py  enable.py  fortnight.py  left.py  next.py  next_week.py  now.py  poll.py  start.py  today.py  today_events_infos.py  tomorrow.py  tomorrow_events_infos.py  week.py
app/bot/handlers/schedule/: __init__.py  fortnight.py  today.py  tomorrow.py  week.py
app/bot/handlers/verification/: __init__.py  captain.py  response.py  student.py  superhero.py
app/bot/keyboards/: event_info_keyboards.py  poll_keyboard.py  teachers_keyboard.py  week_keyboard.py
app/bot/keyboards/types/: event_info.py  poll_answer.py  (+2 more)
app/bot/middlewares/: throttling.py
app/bot/scenes/: poll.py
app/bot/schemas/: base.py  captain.py  response.py  student.py  superhero.py
app/bot/states/: event_info_states.py
app/enums/: cancel_types.py  discipline_types.py  event_period.py  poll.py  role.py  state.py  states.py  telegram_source.py
app/messages/: captain.py  eggs.py  environment.py  events.py  general.py  group.py  poll.py  private.py  response.py  student.py  superhero.py
app/services/: auth_api.py  base_api.py  group_api.py  poll_api.py  response_api.py  schedule_api.py  telegram_group_api.py  user_api.py
app/services/exceptions/: response_exception.py
app/services/types/: answer.py  base.py  category.py  cathedra.py  certain_event.py  create_telegram_group.py  fortnight_general_events.py  general_discipline_type.py  general_event.py  general_events.py  group.py  groups.py  question.py  response.py  student.py  teacher.py  telegram.py  telegram_groups.py  teleram_group.py  update_telegram_group.py  users_teachers.py
app/utils/: cache.py  commands.py  date_service.py  discipline_type.py  emoji.py  events.py  get_discipline_type_name.py  telegram.py
src/: app.ts  bot.ts  index.ts  server.ts
src/actions/: action.surrounder.ts  actions.factory.ts  approve.action.ts  approve.captain.ts  approve.course.ts  approve.response.ts  approve.review.ts  approve.student.ts  approve.subject.ts  approve.superhero.ts  approve.teacher.ts  approve.teachers.contact.ts  approveCourse.ts  approveReview.ts  approveSubject.ts  approveSuperhero.ts  approveTeacher.ts  approveTeacherContact.ts  cancelLogin.ts  debug.ts  deny.captain.ts  deny.course.ts  deny.response.ts  deny.review.ts  deny.student.ts  deny.subject.ts  deny.superhero.ts  deny.teacher.ts  deny.teachers.contact.ts  denyCourse.ts  denyReview.ts  denySubject.ts  denySuperhero.ts  denyTeacher.ts  denyTeacherContact.ts  login.ts  start.ts
src/api/: courses.ts  index.ts  oauth.ts  response.ts  reviews.ts  state.ts  subjects.ts  supeheroes.ts  superheroes.ts  teacherContacts.ts  teachers.ts  user.ts
src/api/dtos/: captain.dto.ts  course.dto.ts  review.dto.ts  student.dto.ts  subject.dto.ts  superhero.dto.ts  teacher.contact.dto.ts  teacher.dto.ts
src/api/v1/: index.ts  teachers.routes.ts
src/callbacks/: captain.ts  response.ts  student.ts  superhero.ts
src/routes/: proxy.ts
src/telegram/: telegram.sevice.ts
(+26 files in other folders)
