[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.0.0"
jinja2 = "^3.1.2"
cachetools = "^5.3.0"
fastapi = "^0.103.0"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
uvicorn = "^0.23.2"
ngrok = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.286"
mypy = "^1.5.1"
types-cachetools = "^5.3.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 150
select = ["F", "E", "W", "I001"]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
